@@ -8,3 +8,4 @@ bin/datos/13*.*ast
 bin/datos/14*.*ast
 bin/datos/13*.*gps
 bin/datos/14*.*gps
+bin/datos/local*
