@@ -5,7 +5,7 @@ enabled = true
 source = "file"
 
 # if source = file, declare filename
-source_file = "datos/140503-este-000001.gps"
+source_file = "datos/140129-este-160001.gps"
 
 # gps version: 0 = AUTO, 1 = GPSv1, 2 = GPSv2
 source_file_gps_version = 0
@@ -85,7 +85,7 @@ dest_file_format = "gps"
 # besides the format, extension can be changed
 # ast | sast | gps | sgps
 dest_file_extension = "gps"
-#dest_file_extension = "sast"
+#dest_file_extension = "ast"
 
 # directory to upload (ip is also needed, should be fixed)
 # dest_ftp_uri = "ftp://172.88.0.73/pub/swap/"
